[gd_scene load_steps=5 format=2]

[ext_resource path="res://FlootTrap.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.705882, 0.101961, 0.101961, 1 )

[node name="Trigger" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.778805, 0, 0, 0, 0.0793127, 0, 0, 0, 0.87245, 0.00522113, -0.799308, -0.00804292 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0773308, 0, 0, 0, 1, 0.00522113, -0.901061, -0.00804292 )
mesh = SubResource( 2 )
material/0 = null

[connection signal="body_entered" from="." to="." method="_on_Spatial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spatial_body_exited"]
